--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,13 @@
-.all{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-
-}
-
-.aboutcontainer{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-width: 100%;
-margin: 20px 40%;
-
-justify-items: center;
-
-}
-a{
-  text-decoration: none;
-}
-
-.info{
-
-height: 100%;
-justify-content: center;
-align-items: center;
-max-width: 60em;
-padding: 20px;
-font-weight: bolder;
-
-}
-img[src="/images/myetibo.jpg"]{
-  max-width: 80vh;
-  margin: 30px;
-}
+.App {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #f0f0f0;
+  }
+  
+  body {
+    padding: 0;
+    margin: 0;
+  }
