--- a/src/componets/Navbar.css
+++ b/src/componets/Navbar.css
@@ -3,12 +3,20 @@
     margin-bottom: 20px;
     
 }
+.bg{
+    background-color: blue;
+}
+.atp{
+    color: greenyellow;
+    font-weight: bolder;
+}
 .navbar{
     display: flex;
     align-items: center;
     justify-content: center;
 background-color: grey;
 padding: 2px 6px;
+
 
 }
 .navright{
